--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Oishii",
+  "name": "oishii",
   "version": "1.0.0",
   "description": "Buy our yummy snacks!!",
   "main": "index.js",
@@ -20,6 +20,7 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.3",
@@ -56,5 +57,13 @@
     "supertest": "^4.0.2",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Winternet-is-coming/GraceShopper.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Winternet-is-coming/GraceShopper/issues"
+  },
+  "homepage": "https://github.com/Winternet-is-coming/GraceShopper#readme"
 }
