--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.0.0",
     "compression": "^1.7.3",
     "express": "^4.16.4",
+    "fontsource-roboto": "^4.0.0",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "material-ui": "^0.20.2",
