--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.0.0",
     "compression": "^1.7.3",
     "express": "^4.16.4",
+    "express-session": "^1.17.2",
     "file-loader": "^6.2.0",
     "fontsource-roboto": "^4.0.0",
     "history": "^4.9.0",
