--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "axios": "^0.21.1",
@@ -76,5 +77,9 @@
   "bugs": {
     "url": "https://github.com/Winternet-is-coming/GraceShopper/issues"
   },
-  "homepage": "https://github.com/Winternet-is-coming/GraceShopper#readme"
+  "homepage": "https://github.com/Winternet-is-coming/GraceShopper#readme",
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": []
 }
